--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,58 @@
   padding: 0;
 }
 
+body {
+  min-height: 100vh;
+  width: 100vw;
+  position: relative;
+}
+
 .header {
   background-color: aqua;
-  height: 10vh;
+  height: 100px;
   text-align: center;
+}
+
+.headerText {
+  margin-bottom: 20px;
+  padding-top: 20px;
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  /* margin: 0 auto; */
 }
 
 .home {
   background-color: blueviolet;
-  height: 85vh;
+  height: 100vh;
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin: 0 auto;
 }
 
 .footer {
   background-color: chartreuse;
-  height: 5vh;
-  position: relative;
+  height: 8vh;
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin: 0 auto;
+}
+
+.navigation {
+  height: 40px;
+  background-color: chocolate;
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin: 0 auto;
 }
