--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,8 @@ body {
 }
 
 .header {
-  background-color: aqua;
+  background: rgb(83, 129, 166);
+  background: linear-gradient(90deg, rgba(83, 129, 166, 1) 0%, rgba(184, 61, 199, 1) 52%, rgba(99, 24, 167, 1) 100%);
   height: 100px;
   text-align: center;
 }
@@ -26,7 +27,29 @@ body {
 }
 
 .home {
-  background-color: blueviolet;
+  background-color: gray;
+  height: 100vh;
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin: 0 auto;
+}
+
+.bio {
+  background-color: gray;
+  height: 100vh;
+  text-align: center;
+  align-self: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin: 0 auto;
+}
+
+.contact {
+  background-color: gray;
   height: 100vh;
   text-align: center;
   align-self: center;
@@ -37,7 +60,8 @@ body {
 }
 
 .footer {
-  background-color: chartreuse;
+  background: rgb(99, 24, 167);
+  background: linear-gradient(90deg, rgba(99, 24, 167, 1) 0%, rgba(184, 61, 199, 1) 52%, rgba(83, 129, 166, 1) 100%);
   height: 50px;
   text-align: center;
   align-self: center;
@@ -49,16 +73,15 @@ body {
 
 .navigation {
   height: 40px;
-  background-color: chocolate;
+  background: rgb(83, 129, 166);
+  background: linear-gradient(90deg, rgba(83, 129, 166, 1) 0%, rgba(184, 61, 199, 1) 52%, rgba(99, 24, 167, 1) 100%);
   position: relative;
   text-align: center;
   align-self: center;
   justify-content: space-evenly;
   align-items: center;
   display: flex;
-  margin: 0 auto;
-  color: black;
-  text-decoration: none;
+  border-top: black 1px solid;
 }
 
 .navigation a {
@@ -75,21 +98,21 @@ body {
 
 .socialLinksFooter {
   display: inline-flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin: 0 auto;
 }
 
 .socialLinksFooter a {
   display: inline;
-  color: black;
+  color: rgb(214, 204, 144);
   justify-content: space-around;
-  font-size: calc(10px + 1vmin);
+  font-size: calc(15px + 1vmin);
   transition: linear 0.3s;
-  margin: 0 50%;
+  margin: 0 10vw;
 }
 
 .socialLinksFooter i:hover {
   transform: scale(1.4);
-  color: black;
+  color: rgb(214, 204, 144);
   transition: linear 0.3s;
 }
