--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,12 @@ body {
   justify-content: center;
   align-items: center;
   display: flex;
+  color: antiquewhite;
+}
+
+.headerText:hover {
+  font-size: calc(30px + 1vmin);
+  transition: ease-in-out 0.3s;
 }
 
 .home {
@@ -49,8 +55,8 @@ body {
 }
 
 .contact {
-  background-color: gray;
-  height: 100vh;
+  background-color: rgb(169, 203, 241);
+  min-height: 100vh;
   text-align: center;
   align-self: center;
   justify-content: center;
@@ -73,7 +79,7 @@ body {
 
 .navigation {
   height: 40px;
-  background: rgb(83, 129, 166);
+  background: rgba(83, 129, 166, 0.1);
   background: linear-gradient(90deg, rgba(83, 129, 166, 1) 0%, rgba(184, 61, 199, 1) 52%, rgba(99, 24, 167, 1) 100%);
   position: relative;
   text-align: center;
@@ -81,7 +87,7 @@ body {
   justify-content: space-evenly;
   align-items: center;
   display: flex;
-  border-top: black 1px solid;
+  border-top: white 1px solid;
 }
 
 .navigation a {
@@ -93,7 +99,8 @@ body {
 .navigation a:hover {
   margin: 0 7vw;
   color: antiquewhite;
-  transform: scale(1.1);
+  font-size: calc(15px + 1vmin);
+  transition: ease-in 0.3s;
 }
 
 .socialLinksFooter {
@@ -115,4 +122,22 @@ body {
   transform: scale(1.4);
   color: rgb(214, 204, 144);
   transition: linear 0.3s;
+}
+
+input {
+  width: 333px;
+  height: 30px;
+  text-align: center;
+}
+
+label {
+  line-height: 30px;
+}
+
+button {
+  width: 333px;
+  height: 30px;
+  background-color: green;
+  color: aliceblue;
+  font-size: larger;
 }
